[package]
name = "bueler-dom"
description = "DOM renderer for the Bueler framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bueler-core = { path = "../oxide-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlHeadElement",
    "Node",
    "Text",
    "Window",
    "Navigator",
    "Event",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "EventTarget",
    "KeyboardEvent",
    "Storage",
    "CssStyleDeclaration",
    "DomTokenList",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "Location",
    "History",
    "MediaQueryList",
    "MediaQueryListEvent",
    "PopStateEvent",
    "Url",
]
