[package]
name = "bueler-resiliency"
description = "Resiliency patterns for Bueler — error boundaries, retry, circuit breaker, timeout"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bueler-core = { path = "../oxide-core" }
bueler-dom = { path = "../oxide-dom" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["Element", "Node", "HtmlElement"]
