[package]
name = "bueler-router"
description = "Client-side router for Bueler WASM applications"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bueler-core = { path = "../oxide-core" }
bueler-dom = { path = "../oxide-dom" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Location",
    "History",
    "Event",
    "PopStateEvent",
    "HtmlAnchorElement",
    "Document",
    "Element",
    "Node",
    "EventTarget",
    "Url",
]
