[package]
name = "oxide-telemetry"
description = "OpenTelemetry-compatible tracing for Oxide WASM applications"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oxide-core = { path = "../oxide-core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Performance",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
]
