[package]
name = "bueler"
description = "Bueler — A Rust frontend framework compiling to WebAssembly"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bueler-core = { path = "../oxide-core" }
bueler-macros = { path = "../oxide-macros" }
bueler-dom = { path = "../oxide-dom" }
bueler-telemetry = { path = "../oxide-telemetry" }
bueler-resiliency = { path = "../oxide-resiliency" }
bueler-router = { path = "../oxide-router" }
bueler-components = { path = "../oxide-components" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Element"]
