[package]
name = "bueler-showcase"
description = "Bueler feature showcase — every major web API demonstrated in Rust/WASM"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bueler = { path = "../../crates/oxide" }
bueler-telemetry = { path = "../../crates/oxide-telemetry" }
bueler-resiliency = { path = "../../crates/oxide-resiliency" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Storage",
    "MouseEvent",
    "KeyboardEvent",
    "HtmlElement",
    "CssStyleDeclaration",
    "DomRect",
    "Response",
    "Headers",
    "RequestInit",
    "RequestMode",
    "DragEvent",
    "DataTransfer",
    "ClipboardEvent",
    "Clipboard",
    "Navigator",
    "Location",
]
