[package]
name = "todo-example"
description = "Todo app example for the Bueler framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bueler = { path = "../../crates/oxide" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["KeyboardEvent"]
